--- a/functions/package.json
+++ b/functions/package.json
@@ -3,6 +3,8 @@
   "description": "Cloud Functions for Firebase",
   "dependencies": {
     "algoliasearch": "^3.22.3",
+    "cors": "^2.8.3",
+    "express": "^4.15.3",
     "firebase-admin": "~4.2.1",
     "firebase-functions": "^0.5.7"
   },
