--- a/functions/package.json
+++ b/functions/package.json
@@ -2,14 +2,15 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
-    "algoliasearch": "^3.22.3",
-    "cors": "^2.8.3",
-    "express": "^4.15.3",
     "firebase-admin": "~4.2.1",
     "firebase-functions": "^0.5.7"
   },
   "private": true,
   "devDependencies": {
-    "@types/algoliasearch": "^3.18.1"
-  }
+    "@types/algoliasearch": "^3.18.1",
+    "algoliasearch": "^3.22.3",
+    "cors": "^2.8.3",
+    "express": "^4.15.3"
+  },
+  "version": "0.1.0"
 }
