--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy:functions": "tsc -p functions/tsconfig.json && firebase deploy --only functions"
+    "build:f": "webpack -p --config functions/webpack.config.js",
+    "deploy:f": "npm run build:f && firebase deploy --only functions"
   },
   "private": true,
   "dependencies": {
@@ -37,6 +38,7 @@
     "@types/jasmine": "2.5.45",
     "@types/lodash": "^4.14.65",
     "@types/node": "~6.0.60",
+    "awesome-typescript-loader": "^3.1.3",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
